Changelog
=========

0.1.0 (23-Oct-2012)
-------------------

* Initial release


0.2.0 (23-Oct-2012)
-------------------

* Fixed the broken lock acquire/release implementation when updating the
  application context dictionary.
* The locking mechanism is now available for all scopes.
* The context manager is now responsible for updating the context dictionaries.
* Fixed duplicate factory calls when providing a factory returning None
* ScopeManager.exit_scope now raise a UndefinedScopeError when exiting an
  undeclared scope
* Fixed the API documentation